Fix layout issues

--- a/style.css
+++ b/style.css
@@ -13,23 +13,23 @@ body {
     display: grid;
     height: 100%;
     grid-template-columns: 1fr 60% 1fr;
-    grid-template-rows: 200px min-content min-content;
+    grid-template-rows: 180px min-content 1fr;
     /* repeat(2, clamp(200px, 1fr, 400px)); */
-    gap: 4px;
+    gap: 0px;
     background: #e5f0e3;
-    border: 4px dotted black;
 }
 
 
 .logo img {
     max-width: 3rem;
     filter: invert(100%);
-    border: 2px solid green;
 }
 
 div.logo {
     font-size: 2rem;
     color: white;
+    display: flex;
+    align-items: center;
 }
 
 img.icons {
@@ -41,26 +41,57 @@ img.icons {
     background-color: white;
     grid-row: 1 / 2;
     grid-column: 2 / -1;
-    box-shadow: 0px 3px 5px #ccc;
+    box-shadow: 0px 0px 5px #ccc;
     display: grid;
-    grid-template-columns: 65% 35%;
-    grid-template-rows: 1fr 1fr;
-    padding: 20px 42px;
+    grid-template-columns: 70% 30%;
+    grid-template-rows: 70px 110px;
+    padding: 5px 0 5px;
 }
 
 .search {
+    display: grid;
+    grid-template-columns: 30px 1fr;
+    align-self: center;
+    padding-left: 2rem;
+    gap: 1rem;
+}
 
+.search label {
+    grid: 1/1/-1/-1;
 }
 
 .account {
-
+    font-weight: 600;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 2fr 1fr 3fr;
+    align-items: center;
+    justify-items: center;
+    gap: 2rem;
+    padding: 0 2rem;
 }
 
 div.greeting {
     display: grid;
     grid-template-rows: 1fr;
     grid-template-columns: min-content 1fr;
-    gap: 10px;
+    gap: 1.5rem;
+    margin-top: -15px;
+    font-weight: 600;
+    align-self: center;
+    padding-left: 2rem;
+}
+
+.greeting img {
+    border-radius: 50%;
+    width: 5rem;
+}
+
+.greeting p {
+    align-self: center;
+}
+.greeting span {
+    font-size: 2rem;
 }
 
 .post {
@@ -72,18 +103,9 @@ div.greeting {
     justify-content: center;
 }
 
-.greeting img {
+img.user-pfp {
     border-radius: 50%;
-    width: 5rem;
-}
-
-.greeting span {
-    font-size: 2rem;
-}
-
-.user-pfp {
-    border-radius: 50%;
-    width: 4rem;
+    width: 3rem;
 }
 
 .side-nav .icons {
@@ -106,10 +128,6 @@ ul {
     background-color: white;
 }
 
-li {
-    border: 5px solid orange;
-}
-
 .menu {
     display: grid;
     grid-template-columns: 1fr;
@@ -122,48 +140,52 @@ li {
 .side-nav {
     grid-row: 1 / -1;
     grid-column: 1 / 2;
-    border: 2px dashed red;
     background: #60a35e;
     display: grid;
-    grid-template-rows: 10% 50% 40%;
+    grid-template-rows: 100px 1fr 2fr;
     grid-template-columns: 1fr;
     justify-content: left;
-    padding: 1rem 2rem;
+    padding: 0 2rem;
+    font-weight: 600;
 }
 
 .project-section {
-    padding: 20px 12px;
+    padding: 20px 15px;
     grid-column: 2 / 3;
     grid-row: 2 / 4;
 }
 
 .announcements, .trending {
-    padding: 20px 12px;
+    padding: 20px 1rem 0 1rem;
     grid-column: 3 / -1;
-    padding: 20px 12px;
+    margin-bottom: 0;
 }
 
 .projects {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 2rem;
-    border: 2px dotted black;
+    grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
+    gap: 1.5rem;
 }
 
 .section-title {
     font-size: 1.5rem;
-    padding: .75rem 0 0.5rem;
+    padding: 0.5rem 0 0.5rem;
     margin: 0;
+    font-weight: 600;
+}
+
+p.text {
+    color: #555;
 }
 
 .projects .card {
     border-left: 7px solid hsl(338, 38%, 42%);
     display: grid;
-    grid-template-rows: 20px 4fr .5fr 1fr;
+    height: 275px;
+    grid-template-rows: 25px 4fr .5fr 1fr;
 }
 
 .projects .card  div {
-    background-color: lightblue;
     grid-row: -2 / -1;
     width: 100px;
     display: grid;
@@ -185,18 +207,48 @@ button {
     color: white;
     border-radius: 20px;
     padding: 10px 20px;
-    border: 1px solid #60a35e;
-    font-size: 1rem;
+    border: 2px solid #60a35e;
+    font-size: 1.15rem;
     max-width: 100px;
+    font-family: Roboto, serif;
 }
 
 input {
     background-color: #e5f0e3;
     width: clamp(400px, 80%, 1000px);
-    height: 1.5rem;
+    height: 1.7rem;
     border-radius: 50px;
     outline: none;
-    border: 1px solid  #e5f0e3;
+    padding-left: 7px;
+    font-family: Roboto, serif;
+    font-size: 1.15rem;
+    border: 2px solid  #e5f0e3;
+}
+
+input:hover {
+    border: 2px solid hsl(118, 77%, 20%);
+}
+
+input:focus {
+    border: 2px solid hsl(118, 77%, 20%);
+    box-shadow: inset 3px 3px 5px #ccc;
+}
+
+li {
+    border: 2px solid transparent;
+}
+
+li:hover, button:hover {
+    cursor: pointer;
+}
+
+li:hover {
+    border: 2px solid #e5f0e3;
+    border-radius: 10px;
+}
+
+button:hover {
+    border: 2px solid hsl(118, 77%, 20%)
 }
 
 ul li {
@@ -206,7 +258,7 @@ ul li {
 
 .title {
     font-weight: 600;
-    font-size: 1rem;
+    font-size: 1.35rem;
 }
 
 .announcements .card {
@@ -228,12 +280,23 @@ ul li {
     box-shadow: 0px 3px 5px #ccc;
 }
 
+.trending .card {
+    padding: 1rem;
+}
+
 div.user {
     display: grid;
+    padding: 1rem;
+    gap: 4px;
     grid-template-columns: min-content 1fr;
     grid-template-rows: 1fr 1fr;
 }
 
 div.user > img {
     grid-row: 1 / 3;
+    margin-right: 1rem;
+}
+
+.projects .card p:nth-child(2) {
+    font-size: 1.15rem;
 }
